--- a/warsztaty/formularz-html/index.html
+++ b/warsztaty/formularz-html/index.html
@@ -10,8 +10,8 @@
         <input type="surname" placeholder="Your surname" name="surname"><br><br>
         <input type="email" placeholder="Your email" name="email"><br><br>
         <input type="text" placeholder="Your phone number" name="number"><br><br>
-        <textarea name="" placeholder="Your message" name="message"></textarea><br><br>
-         <input type="submit" value="Wyślij wiadomość" name="submit">
+        <textarea placeholder="Your message" name="message"></textarea><br><br>
+        <input type="submit" value="Wyślij wiadomość" name="submit">
     </form>
 </body>
 </html>
