--- a/warsztaty/formularz-html/index.html
+++ b/warsztaty/formularz-html/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <form action="https://formspree.io/adamiak.marta@gmail.com" method="post">
-        <input type="name" placeholder="Your name" name="name"><br><br>
-        <input type="surname" placeholder="Your surname" name="surname"><br><br>
+        <input type="text" placeholder="Your name" name="name"><br><br>
+        <input type="text" placeholder="Your surname" name="surname"><br><br>
         <input type="email" placeholder="Your email" name="email"><br><br>
         <input type="text" placeholder="Your phone number" name="number"><br><br>
         <textarea placeholder="Your message" name="message"></textarea><br><br>
