--- a/warsztaty/formularz-html/index.html
+++ b/warsztaty/formularz-html/index.html
@@ -10,7 +10,7 @@
         <input type="text" placeholder="Your surname" name="surname"><br><br>
         <input type="email" placeholder="Your email" name="email"><br><br>
         <input type="text" placeholder="Your phone number" name="number"><br><br>
-        <textarea name="message"></textarea><br><br>
+        <textarea name="message" placeholder="message"></textarea><br><br>
         <input type="submit" value="Wyślij wiadomość" name="submit">
     </form>
 </body>
