--- a/warsztaty/formularz-html/index.html
+++ b/warsztaty/formularz-html/index.html
@@ -5,6 +5,7 @@
     <title>Formularz kontaktowy</title>
 </head>
 <body>
+   <h1>Formularz kontaktowy</h1>
     <form action="https://formspree.io/adamiak.marta@gmail.com" method="post">
         <input type="text" placeholder="Your name" name="name"><br><br>
         <input type="text" placeholder="Your surname" name="surname"><br><br>
