ponowna zmiana maila2

--- a/zadania-domowe/zadanie-1/index.html
+++ b/zadania-domowe/zadanie-1/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Zapisz się na szkolenie!</h1>
-    <form action="https://formspree.io/adamiak.marta@gmail.com" method="post">
+    <form action="https://formspree.io/marta@zdalnebabki.pl" method="post">
         <label for="name">Imię:</label>
         <input type="text" id="name" name="name"><br>
         <label for="surname">Nazwisko:</label>
