--- a/zadania-domowe/zadanie-1/index.html
+++ b/zadania-domowe/zadanie-1/index.html
@@ -15,18 +15,18 @@
         <input type="text" id="surname" name="surname"><br>
         <label for="surname">Email:</label>
         <input type="text" id="email" name="email"><br>
-        <label for="city">Miasto:</label> 
-        <select id="city">
+        <p>Miasto:</p>
+        <select name="city">
             <option value="Krakow">Kraków</option>
             <option value="Warszawa">Warszawa</option>
             <option value="Gdansk">Gdańsk</option>
             </select>
         <p>Podaj płeć:</p>
-        <input type="radio" id="woman" name="choose" value="Kobieta">
+        <input type="radio" id="woman" name="sex" value="Kobieta">
         <label for="woman">Kobieta</label> <br>
-        <input type="radio" id="man" name="choose" value="Mężczyzna">
+        <input type="radio" id="man" name="sex" value="Mężczyzna">
         <label for="man">Mężczyzna</label><br>
-  <input type="checkbox" name="check" id="check">
+  <input type="checkbox" name="agreement" id="check">
  <label for="check">Wyrażam zgodę na przetwarzanie danych osobowych</label><br>
   <label for="message">Treść wiadomości:</label> <br>
 <textarea name="message" id="message">...</textarea><br>
