--- a/zadania-domowe/zadanie-1/index.html
+++ b/zadania-domowe/zadanie-1/index.html
@@ -15,13 +15,11 @@
         <input type="text" id="surname" name="surname"><br>
         <label for="surname">Email:</label>
         <input type="text" id="email" name="email"><br>
-        <p>Miasto:</p>
         <select name="city">
             <option value="Krakow">Kraków</option>
             <option value="Warszawa">Warszawa</option>
             <option value="Gdansk">Gdańsk</option>
-            </select>
-        <p>Podaj płeć:</p>
+            </select><br>
         <input type="radio" id="woman" name="sex" value="Kobieta">
         <label for="woman">Kobieta</label> <br>
         <input type="radio" id="man" name="sex" value="Mężczyzna">
