--- a/zadania-domowe/zadanie-2/index.html
+++ b/zadania-domowe/zadanie-2/index.html
@@ -18,7 +18,7 @@
             <label for="telephone">Telephone:</label>
             <input type="tel" id="telephone" placeholder="Pattern: 1-234-567-8910" required pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{4}"><br>
             <label for="email">Email adress:</label>
-            <input type="email" name="email" id="email" placeholder="Email adress:" required; multiple> <br>
+            <input type="email" name="email" id="email" placeholder="Email adress:" multiple required> <br>
         </fieldset>
         <fieldset>
             <legend> Books
