Poprawka 2 - dodanie name

--- a/zadania-domowe/zadanie-2/index.html
+++ b/zadania-domowe/zadanie-2/index.html
@@ -16,23 +16,22 @@
             <label for="name">Name:</label>
             <input autofocus type="text" name="name" id="name" placeholder="Enter your name" required> <br>
             <label for="telephone">Telephone:</label>
-            <input type="tel" id="telephone" placeholder="Pattern: 1-234-567-8910" required pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{4}"><br>
+            <input type="tel" id="telephone" name="telephone" placeholder="Pattern: 1-234-567-8910" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{4}" required><br>
             <label for="email">Email adress:</label>
             <input type="email" name="email" id="email" placeholder="Email adress:" multiple required> <br>
         </fieldset>
         <fieldset>
             <legend> Books
-
             </legend>
             <select name="books">
             <option>Wypożyczona</option>
-		<option>Zarezerwowana</option>
+		    <option>Zarezerwowana</option>
            <option>Do odbioru</option>
            <option>Zaginiona</option>
            <option>W archiwum</option>
             </select>
             <label for="quantity">Quantity (Maximum 5):</label>
-            <input type="number" id="quantity" min="1" max="5">
+            <input type="number" name="quantity" id="quantity" min="1" max="5">
         </fieldset>
         <input type="submit" name="submit" value="Wyślij">
     </form>
