--- a/zadania-domowe/zadanie-6/index.html
+++ b/zadania-domowe/zadanie-6/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    /*Menu section*/
+    <!--Menu section-->
     <nav id="main-nav">
         <ul id="left-nav">
             <li>link</li>
@@ -22,13 +22,13 @@
             <li>link</li>
         </ul>
     </nav>
-    /*Header section*/
+    <!--Header section-->
     <header>
         <div id="main-header">
             <div class="triangle"></div>
         </div>
     </header>
-    /*Main content section */
+   <!--Main content section -->
     <section id="main-content">
         <div class="main-text">
             <h1>Some section content</h1>
