--- a/zadania-domowe/zadanie-12/index.html
+++ b/zadania-domowe/zadanie-12/index.html
@@ -136,12 +136,12 @@
     <div class="row">
     <div class="contact-data col-sm-12 col-md-6 col-lg-6 text-center">
         <h2 class="adress-data">Marta <span class="color-text">Bartosińska</span></h2>
-        <adress>
+        <address>
             ul. Testowa 32/33 <br>
             01-213 Warszawa <br>
             tel. 0800700600 <br>
            <a href="mailto:marta@zdalnebabki.pl">marta@zdalnebabki.pl</a>   
-        </adress>
+        </address>
         <div class="contact-social-icons">
           <a href="http://facebook.com"><i class="fa fa-facebook"></i></a>
            <a href="http://facebook.com"> <i class="fa fa-google-plus"></i></a>
